Melhorando e padronizando o CSS

--- a/src/components/DefaultInput/styles.module.css
+++ b/src/components/DefaultInput/styles.module.css
@@ -1,8 +1,13 @@
+.label {
+    font-size: var(--text-size-default);
+    margin-top: 1.5rem;
+}
+
 .input {
     background-color: transparent;
     text-align: center;
-    font-size: 1.8rem;
-    padding: 0.8rem;
+    font-size: var(--text-size-default);
+    padding: 0.1rem;
     color: var(--text-default);
     outline: none;
     border: 0.2rem solid transparent;
@@ -17,7 +22,7 @@
 
 .input::placeholder {
     color: var(--gray-500);
-    font-size: 1.4rem;
+    font-size: var(--text-size-default);
     font-style: italic;
 }
 
