--- a/src/components/CountDown/styles.module.css
+++ b/src/components/CountDown/styles.module.css
@@ -1,6 +1,10 @@
 .container {
-    font-size: clamp(8rem, 25vw, 16rem);
+    font-size: clamp(8rem, 25vw, 8rem);
     font-weight: bold;
     text-align: center;
-    line-height: 1.5;
+    line-height: 0.5;
+}
+
+.timerTitle {
+    font-size: var(--text-size-timer);
 }
