--- a/src/components/Cycles/styles.module.css
+++ b/src/components/Cycles/styles.module.css
@@ -4,6 +4,7 @@
     align-items: center;
     justify-content: center;
     gap: 1.6rem;
+    font-size: var(--text-size-default);
 }
 
 .cycleDots{
