--- a/src/components/Logo/styles.module.css
+++ b/src/components/Logo/styles.module.css
@@ -2,8 +2,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 2.4rem;
-    padding-top: 3.2rem;
+    gap: 0.4rem;
+    /*padding-top: 0.rem;*/
 }
 
 .logoLink {
@@ -13,7 +13,7 @@
     gap: 0.5rem;
     flex-direction: column;
     font-weight: bold;
-    font-size: 4.2rem;
+    font-size: 2.2rem;
     text-decoration: none;
     color: var(--primary);
     transition: all 0.5s ease-in-out;
@@ -24,6 +24,10 @@
 }
 
 .logoLink svg {
-    width: 6.4rem;
-    height: 6.4rem;
+    width: 3.4rem;
+    height: 3.4rem;
+}
+
+.logoTitle {
+    font-size: var(--text-size-title);
 }
